<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/back">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView

            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/arow"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/back"
            android:textColor="#ffffff"
            android:textSize="25dp"

            />

        <ImageView
            android:layout_width="150dp"
            android:layout_height="120dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"

            android:src="@drawable/logo" />
    </RelativeLayout>

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <Button
        android:id="@+id/addmandop"
        android:layout_width="150dp"
        android:background="@color/text"
        android:text="@string/addmandop"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/addmal3aab"
        android:layout_width="150dp"
        android:background="@color/text"
        android:textStyle="bold"
        android:text="@string/addmal3abk"
        android:textColor="@color/colorPrimaryDark"
        android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>