<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/text"
    android:orientation="vertical"
    tools:context="com.Alatheer.marmy.UI.mandopRequest">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="20dp"
        android:orientation="horizontal">
    <LinearLayout
        android:layout_width="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/profileimg"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/image"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/addprofile"
            android:layout_gravity="center"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"

        android:orientation="vertical"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/cardimg"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/image"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/addcard"
            android:layout_gravity="center"
            />
    </LinearLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/reson"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:textColor="@color/colorPrimaryDark"
        android:padding="10dp"
        android:textSize="15dp"
        android:textStyle="bold"
        android:textColorHint="@color/colorPrimaryDark"
        android:hint="@string/whyadd"
        android:layout_marginBottom="20dp"
        android:layout_height="160dp" />

    <Button
        android:id="@+id/endam"
        android:layout_width="wrap_content"
        android:text="@string/endam"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/text"
        android:textSize="15dp"
        android:textStyle="bold"
        android:background="@drawable/detail1"
        android:layout_height="wrap_content" />
</LinearLayout>
