<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.Alatheer.marmy.UI.Home">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView

                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:drawableLeft="@drawable/arow"
                android:drawablePadding="10dp"
                android:gravity="center"
                android:text="@string/back"
                android:textColor="#ffffff"
                android:textSize="25dp"

                />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="120dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10dp"

                android:src="@drawable/logo" />
        </RelativeLayout>

        <TextView
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"

            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@color/white"

            android:gravity="center"
            android:text="@string/detail"

            android:background="@drawable/detail" />

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:background="#31ffffff"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_weight="2"
                            android:text="@string/date"
                            android:textColor="#fff"
                            android:textSize="12dp"
                            android:layout_marginBottom="10dp"
                            android:layout_gravity="center"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/datetext"
                            android:layout_width="wrap_content"
                            android:layout_height="25dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_weight="3"
                            android:layout_marginBottom="10dp"

                            android:background="@drawable/backkk"
                            android:gravity="center"
                            android:textColor="@color/text" />

                        <ImageView
                            android:id="@+id/calender"

                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:layout_marginRight="20dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:src="@drawable/calender" />

                    </LinearLayout>



                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="10dp"
                                android:text="@string/hour"
                                android:textColor="#fff"
                                android:textSize="12dp"
                                android:layout_marginBottom="10dp"

                                android:textStyle="bold" />




                            <Spinner
                                android:id="@+id/spinner"
                                android:layout_width="60dp"
                                android:layout_height="25dp"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:background="@drawable/backtextview" />


                        </LinearLayout>





                </LinearLayout>

                <TextView
                    android:layout_width="130dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="#b5c97b" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/sum"
                        android:textColor="#b5c97b"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="000"
                        android:textColor="#fff"

                        android:textSize="25dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/ryal"
                        android:textColor="#b5c97b"

                        android:textSize="20dp" />


                </LinearLayout>
                <TextView
                    android:id="@+id/book"
                    android:layout_width="70dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:text="@string/book"
                    android:gravity="center"
                    android:textColor="@color/colorPrimary"
                    android:background="@drawable/book" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/Img_graund"

                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="-40dp"
                    android:src="@drawable/play1" />

                <TextView
                    android:id="@+id/namegraund"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="-40dp"
                    android:background="@drawable/nameee"
                    android:gravity="center"
                    android:text="adfrfrf"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20dp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:src="@drawable/capacty" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:text="@string/capacity"
                    android:textColor="#fff"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/capicity"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:background="@drawable/backkk"
                    android:gravity="center"
                    android:text="adfrfrf"
                    android:textColor="@color/text"
                    android:textSize="15dp"
                    android:textStyle="bold" />


                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"

                    android:layout_marginTop="55dp"
                    android:src="@drawable/pic" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/gallary"
                    android:textColor="#fff"
                    android:textSize="20dp" />

                <ImageView
                    android:id="@+id/imgs"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:src="@drawable/galary" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:src="@drawable/location" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:text="@string/location"
                    android:textColor="#fff"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/adress"

                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:background="@drawable/backkk"
                    android:gravity="center"
                    android:text="adfrfrf"
                    android:textColor="@color/text"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/map"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/btn3"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/Map"
                    android:textColor="#ffffff"
                    android:textStyle="normal" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="38dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="35dp"
                    android:src="@drawable/money" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:text="@string/salary"
                    android:textColor="#fff"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/cost"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:background="@drawable/backkk"
                    android:gravity="center"
                    android:text="adfrfrf"
                    android:textColor="@color/text"
                    android:textSize="15dp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>