<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:background="@color/text"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="25dp"
    android:background="@color/text"
    android:layout_height="match_parent"
    tools:context="com.Alatheer.marmy.UI.ConfirmResrvation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/name_client"
            android:layout_gravity="center_vertical"
            android:textSize="18dp"
            android:padding="5dp"
            android:textColor="@color/text"
            />
        <EditText
            android:layout_width="0dp"
            android:layout_weight="2"
            android:id="@+id/edtnme"
            android:textColor="#fff"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"        android:orientation="horizontal"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:layout_gravity="center_vertical"
            android:textSize="18dp"
            android:padding="5dp"
            android:textColor="@color/text"
            />
        <EditText
            android:layout_width="0dp"
            android:layout_weight="2"
            android:textColor="#fff"
            android:id="@+id/edtphone"
            android:layout_height="wrap_content" />
    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginTop="10dp"
    android:padding="10dp"
    android:orientation="vertical"
    android:background="@color/colorPrimary">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:orientation="horizontal"
        android:background="@color/colorPrimary">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:textColor="@color/text"
            android:text="@string/photo"
            android:layout_gravity="center_vertical"
            android:textSize="18dp"
            android:layout_height="wrap_content" />
        <ImageButton
            android:layout_width="50dp"
            android:id="@+id/btnupload"
            android:layout_height="50dp"
        android:src="@drawable/upload"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:background="@color/text"
            android:textColor="@color/colorPrimary"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/textimg"
        android:layout_width="match_parent"
            android:textColor="@color/text"
            android:textSize="18dp"
            android:layout_height="wrap_content" />
</LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:id="@+id/btnsend"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:layout_gravity="center_vertical"
        android:textSize="25dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"        android:padding="5dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/text"
        />
</LinearLayout>
</ScrollView>